# CPUorGPU_Infer

./: .gitignore  CMakeLists.txt  README.md
data/: grid.txt  kp_driving.txt  kp_source.txt
include/: CudaFun.hpp  InferenceApi.hpp  InferenceCommon.hpp  InferenceStruct.h  OpenVinoInfer.hpp  TensorRTInfer.hpp  cuda_fun.hpp  infer_math.hpp  inference_api.hpp  inference_common.hpp  inference_struct.h  onnxruntime_infer.hpp  openvino_infer.hpp  tensorrt_infer.hpp
openvino_plugins/: CMakeLists.txt
openvino_plugins/addgridsamplePlugin/: CMakeLists.txt  addgridsampleplugin.cpp  addgridsampleplugin.hpp
plugins/: CMakeLists.txt
plugins/addgridsamplePlugin/: CMakeLists.txt  addgridsample.cu  addgridsampleplugin.cpp
src/: gridsample_test.cpp  main.cpp  mainOLD.cpp  main_split_model.cpp  model_diff.cpp  yolo_infer.cpp
src/core/: InferenceApi.cpp  InferenceCommon.cpp  OpenVinoInfer.cpp  TensorRTInfer.cpp  infer_math.cpp  inference_common.cpp  onnxruntime_infer.cpp  openvino_infer.cpp  tensorrt_infer.cpp
src/kernels/: CudaFun.cu  cuda_fun.cu
trt_plugins/: CMakeLists.txt
trt_plugins/addgridsamplePlugin/: addgridsample.cu  addgridsample.cuh  addgridsampleplugin.hpp
trt_plugins/common/: cuda_common.cuh
